2007-03-04  Maximilien Cuony
	* Some modification for errors of improvements of code's style
	* Re-Implementation of firegpgGPG.listkey(private)
	* List key in option dialog show only private keys now

2007-03-03  Maximilien Cuony
	* Implementation of firegpgGPG.listkey(private)
	* Moved some function to firegpgGPG
	* FireGPG context menu added
	* Basic functions for GPGLin.Sign and GPGLin.Verif
	* Basic classes and functions for using GPG added 
	  (sample don't work for the moment)

2007-03-03  Achraf cherti
	* little modification in linux.sh (comments), linux.sh 
	  renamed to run.sh
	* GMail CheckBox in "options" dialog
	* somes improvements in the style of the code of *.js
	* unification of the prototypes and classes name
	* private key listbox added to options dialog
	* tmp files permission is now 0600
	* class* renamed to c*
	* classfirefoxgpg.js renamed to misc.js

2007-03-02  Achraf cherti
	* template generated with the wizard
	* type and description added to install.rdf