@@ -55,3 +55,6 @@
 </vbox>
 </groupbox>
 </dialog>
+
+<!-- vim:ai:et:sw=2:ts=2:sts=2:tw=0:fenc=utf-8
+ -->
